--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-Package    Version
----------- -------
-commonmark 0.9.1
-pip        22.2
-Pygments   2.13.0
-rich       12.5.1
-setuptools 59.6.0
+commonmark==0.9.1
+Pygments==2.13.0
+rich==12.5.1
